PUT segments/<string:segment_id>/content
